<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="78dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buzzrr" />

    <TextView
        android:id="@+id/title"
        android:layout_width="95dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/testPost"
        android:layout_width="310dp"
        android:layout_height="160dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/postHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="108dp"
        android:text="@string/create"
        android:textColor="@color/mainGrey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="81dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="60dp"
        android:background="@color/mainBlack"
        android:text="@string/postButton"
        android:textColor="@color/mainYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testPost" />

</androidx.constraintlayout.widget.ConstraintLayout>